--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "mongoose": "^5.4.17",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
