--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev": "ng serve --proxy-config proxy.conf.json"
+    "dev": "ng serve --proxy-config proxy.conf.json",
+    "psql": "docker-compose exec pg-dev psql -U postgres"
   },
   "private": true,
   "dependencies": {
