--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,19 @@ services:
       - "4200:4200"
     links:
       - nest
+    volumes:
+      - ./angular:/app
+      - angular_modules:/app/node_modules/
   nest:
     build: server
     ports:
       - "3000:3000"
     links:
       - pg-dev
+    volumes:
+      - ./server:/usr/src/app
+      - nest_modules:/usr/src/app/node_modules/
 volumes:
   pgdata:
+  angular_modules:
+  nest_modules:
